NDD-1285: fix spacing and font sizes.

--- a/docroot/profiles/custom/webny/themes/custom/webny_theme/sass/components/_teaser.scss
+++ b/docroot/profiles/custom/webny/themes/custom/webny_theme/sass/components/_teaser.scss
@@ -135,7 +135,7 @@
 
     .webny-teaser-content-wrapper__details {
         padding: 0 15px;
-        height: 328px;
+        height: 329px;
 
         @include breakpoint($min-tablet) {
           height: 188px;
@@ -159,6 +159,9 @@
       padding-top: 0;
       font-size: 16px;
       line-height: 16px;
+    }
+    @include breakpoint($min-desktop) {
+      font-size: 14px;
     }
   }
 
@@ -197,7 +200,8 @@
       padding-right: 15px;
     }
     @include breakpoint($min-desktop) {
-      font-size: 19px;
+      font-size: 18px;
+      line-height: 21px;
     }
   }
 
@@ -289,6 +293,7 @@
 
     .address {
       color: $color-mono-black;
+      padding-left: 0 !important;
 
       &-wrapper {
         margin-top: 10px;
@@ -354,8 +359,8 @@
       float: left;
       width: 45px !important; 
       &.dash {
-        width: 20px !important;
-        padding: 0 11px;
+        //width: 20px !important;
+        padding: 0 0 0 5px;
         font-size: 20px;
       }
     }
@@ -382,7 +387,8 @@
     .venue-name {
       font-size: 13px;
       line-height: 16px;
-      padding-left: 23px;
+      //padding-left: 23px;
+      padding-left: 0 !important;
     }
 
     .venue-name>div {
